--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,8 +189,13 @@ android {
 
 dependencies {
     implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-firebase')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    implementation "com.google.android.gms:play-services-base:17.1.0"
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation "com.google.firebase:firebase-messaging:20.0.0"
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
@@ -209,3 +214,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
+googleServices { disableVersionCheck = true }
