--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.60.5",
     "react-native-checkout": "0.0.8",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-image-picker": "^1.0.2",
