--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "react": "16.8.6",
