--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-image-picker": "^1.0.2",
+    "react-native-modal": "^11.4.0",
     "react-native-payments": "^0.7.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "0.0.11",
