--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,8 @@ target 'ServusSellerApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNAwesomeCardIO', :path => '../node_modules/react-native-awesome-card-io'
+
   target 'ServusSellerAppTests' do
     inherit! :search_paths
     # Pods for testing
