--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,12 @@ target 'ServusSellerApp' do
 
   pod 'RNAwesomeCardIO', :path => '../node_modules/react-native-awesome-card-io'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'ServusSellerAppTests' do
     inherit! :search_paths
     # Pods for testing
