--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lottie-react-native": "^3.3.2",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
@@ -17,13 +18,15 @@
     "react-native-checkout": "0.0.8",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.5.6",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-image-picker": "^1.0.2",
     "react-native-modal": "^11.4.0",
     "react-native-payments": "^0.7.1",
+    "react-native-reanimated": "^1.4.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "0.0.11",
+    "react-native-tab-view": "^2.10.2",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "rn-viewpager": "^1.2.9"
