--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -199,6 +199,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:17.1.0"
     implementation 'com.google.firebase:firebase-core:17.2.0'
     implementation "com.google.firebase:firebase-messaging:20.0.0"
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
