--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "0.0.11",
+    "react-native-svg": "^9.13.3",
     "react-native-tab-view": "^2.10.2",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
